added date feature

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <p id="date"></p>
     <div class="main-div">
       <div class="home-div">
         <p style="margin-bottom: 0px;color:white;font-size:20px;font-weight: bold;">Home</p>
