--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Score Card</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="http://abhinavpalugula.github.io/basket-ball/style.css">
   </head>
   <body>
     <p id="date"></p>
@@ -27,6 +27,6 @@
     </div>
     <p style = "text-align:center;color:white;" id = "leading"></p>
     <button class="incre-button" style="text-align:center" onclick="reset()" >Reset</button>
-    <script src="script.js"></script>
+    <script src="http://abhinavpalugula.github.io/basket-ball/script.js"></script>
   </body>
 </html>
